tests/SyntaxError/Test15/test15.c
int main(){

int b = 4;
int a = func(b,);
return 2*a;

}


int func(int a, int b){
return a*b;
}
